v1.0.2
- made readme more informative

v1.0.1
- improved readme
- started changelog

v1.0.0
- initial release